# my_learnings

./: .gitignore  .gitmodules  README.md
.github/workflows/: go-ci.yml  gobank-ci.yml  gobank-deploy.yml
Elixir/discuss/: .gitignore  mix.exs
Elixir/identicon/: mix.exs
artificial_intelligence/genetic_algorithms_phub_location/: .gitignore  CITATION.cff  Justfile  README.md  pom.xml
artificial_intelligence/mepln/: .gitignore  get_gl_input.sh  gl_input.txt
elixir_cards/: mix.exs
elixir_discuss/config/: test.exs
go_bank/: Dockerfile  Makefile  README.md  app.env  docker-compose.yml  go.mod  go.sum  main.go  start.sh
go_bank/api/: account.go  user.go  (+10 more)
java_kafka/: .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
pytorch/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  HelloWorld.ipynb  Makefile  README.md
rust_clines/: Cargo.toml  README.md
rust_clines/common/: Cargo.toml
rust_clines/common/src/: file.rs  lib.rs
rust_clines/rcat/: Cargo.toml
rust_clines/rcat/src/: cat.rs  main.rs
rust_clines/rcat/tests/: cli.rs
rust_clines/rcat/tests/inputs/: multi_line.txt
rust_clines/recho/: Cargo.toml
rust_clines/recho/src/: echo.rs  main.rs
rust_clines/recho/tests/: cli.rs
rust_clines/rhead/: Cargo.toml
rust_clines/rhead/src/: head.rs  main.rs
rust_clines/rhead/tests/: cli.rs
rust_clines/rhead/tests/inputs/: one.txt  ten.txt
rust_invaders/: README.md
scala_akka/: README.md
spring_jms/: Makefile  build.gradle
spring_microservices/: README.md
vespa_search/: .gitignore  .pre-commit-config.yaml  Makefile
(+445 files in other folders)
